projects open in new window functionality added

--- a/options.css
+++ b/options.css
@@ -18,3 +18,11 @@
     margin-right: 10px;
     float: right;
 }
+
+.tab-name {
+    display: inline-block;
+    width: 200px;
+    white-space: nowrap;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
+}
