--- a/popup.css
+++ b/popup.css
@@ -12,3 +12,19 @@ body{
     margin-right: 10px;
     float: right;
 }
+
+.project-name {
+    display: inline-block;
+    width: 200px;
+    white-space: nowrap;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
+}
+
+.tab-name {
+    display: inline-block;
+    width: 200px;
+    white-space: nowrap;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
+}
